[package]
name = "goral"
version = "0.1.0"
edition = "2021"
author = "Maksim Ryndin"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "goral"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4" }
clap = { version = "4.4.6", features = ["derive"] }
config = { version = "0.13.3", features = ["toml"] }
hyper = { version = "0.14", features = ["http1", "http2", "client"]} # using the same version as google-sheets4
hyper-rustls = "0.24"
futures = "0.3"
google-sheets4 = "*"
prometheus-parse = "0.2.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_valid = { version = "0.16.3", features = ["toml"] }
sysinfo = { version = "0.29.10", default_features = false }
tokio = { version = "^1.0", features = ["sync", "signal"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
url = { version = "2", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
psutil = { version = "3.2.2", default-features = false, features = ["disk"]}

[dev-dependencies]
lazy_static = "1.4.0"
prometheus = "0.13"
