[package]
name = "goral"
version = "0.1.0"
edition = "2021"
author = "Maksim Ryndin"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "goral"

[profile.release]
overflow-checks = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4" }
clap = { version = "4.4.6", features = ["derive"] }
config = { version = "0.13.3", features = ["toml"] }
futures = "0.3"
getrandom = "0.2"
google-sheets4 = "*"
http = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "client", "server"]} # using the same version as google-sheets4
hyper-rustls = "0.24"
lazy_static = "1.4"
prometheus-parse = "0.2.4"
regex = { version = "1", features = ["std", "unicode"] } # use the same version as current crates
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_valid = { version = "0.16.3", features = ["toml"] }
sysinfo = { version = "0.29.10", default_features = false }
tokio = { version = "^1.0", features = ["sync", "signal", "io-std", "process", "net"] }
tonic = { version = "^0.10", features = ["transport", "prost"]}
tonic-health = "0.10.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
url = { version = "2", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
psutil = { version = "3.2.2", default-features = false, features = ["disk"]}

[dev-dependencies]
lazy_static = "1.4.0"
prometheus = "0.13"
prost = "0.12"
tonic-build = "0.10.2"
