[package]
name = "goral"
version = "0.1.9"
edition = "2021"
author = "Maksim Ryndin"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "goral"

[profile.release]
codegen-units = 1
opt-level = 3
overflow-checks = true
strip = "debuginfo"

[profile.dev]
codegen-units = 8
opt-level = 1

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4" }
clap = { version = "4.4.6", features = ["derive"] }
config = { version = "0.13.3", features = ["toml"] }
futures = "0.3"
getrandom = "0.2"
google-sheets4 = "*"
http = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "client", "server"]} # using the same version as google-sheets4
hyper-rustls = "0.24"
lazy_static = "1.4"
prometheus-parse = "0.2.4"
regex = { version = "1", features = ["std", "unicode"] } # use the same version as current crates
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_valid = { version = "0.16.3", features = ["toml"] }
sysinfo = { version = "0.30", default-features = false }
tokio = { version = "^1.0", features = ["sync", "signal", "io-std", "process", "net"] }
tonic = { version = "^0.10", features = ["transport", "prost"]}
tonic-health = "0.10.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
url = { version = "2", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
logwatcher2 = { git = "https://github.com/maksimryndin/logwatcher2.git", rev="9124084dedf7cca548a7be01f0195b876683749a" }
psutil = { version = "3.2.2", default-features = false, features = ["disk"]}

[dev-dependencies]
prost = "0.12"
rand = "0.8.5"
tonic-build = "0.10.2"
